misc updates between major sessions

--- a/jupyter/build_database.ipynb
+++ b/jupyter/build_database.ipynb
@@ -25,6 +25,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Useful Commands:\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -101,7 +108,7 @@
    },
    "outputs": [],
    "source": [
-    "# set edge labels\n",
+    "# set edge labels: write over them and erase the old ones.\n",
     "command = \"\"\"\n",
     "    match (n)-[e1 {association:\"positive\"}]-(m)\n",
     "    CREATE (n)-[e2:pos]->(m)\n",
