updated writeup to reflect initial connected-components results

--- a/writeups/milestone.bib
+++ b/writeups/milestone.bib
@@ -6,6 +6,17 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{fortunato2010community,
+  title={Community detection in graphs},
+  author={Fortunato, Santo},
+  journal={Physics reports},
+  volume={486},
+  number={3},
+  pages={75--174},
+  year={2010},
+  publisher={Elsevier}
+}
+
 @article{agler2016microbial,
   title={Microbial hub taxa link host and abiotic factors to plant microbiome variation},
   author={Agler, Matthew T and Ruhe, Jonas and Kroll, Samuel and Morhenn, Constanze and Kim, Sang-Tae and Weigel, Detlef and Kemen, Eric M},
