build-only java script made
Need to:
- make it a jar & test it from Python
- add a Neo4j command that deletes the prior database if it exists
- start storing my jars somewhere more organized

--- a/jupyter/java_calls_from_python_and_plotting.ipynb
+++ b/jupyter/java_calls_from_python_and_plotting.ipynb
@@ -164,6 +164,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "example_result = None  # wipe out pre-existing if exists\n",
+    "example_result = subprocess.check_output(['java', '-jar', '../ConstructBinaryNetwork.jar', '0.03'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "example_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
