notebook runs on waffle; set path to java

--- a/jupyter/build_and_query_networks_from_python.ipynb
+++ b/jupyter/build_and_query_networks_from_python.ipynb
@@ -54,6 +54,30 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# for Waffle, until the default Java is set to 8:\n",
+    "java=\"/usr/lib/jvm/java-8-oracle/jre/bin/java\"\n",
+    "# for badger, set java = 'java'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "! pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
@@ -65,11 +89,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "example_build = subprocess.check_output(['java', '-jar', \n",
+    "example_build = subprocess.check_output([java, '-jar', \n",
     "                                         '../jars/ConstructBinaryNetwork.jar', '0.05'])"
    ]
   },
@@ -93,7 +117,7 @@
    "outputs": [],
    "source": [
     "example_result = subprocess.check_output(\n",
-    "    ['java', '-jar', '../jars/ConnectedComponentsFinder.jar', \n",
+    "    [java, '-jar', '../jars/ConnectedComponentsFinder.jar', \n",
     "     '../data_mining_Neo4j_v2_3_2/databases/db_binary_0.010000'])"
    ]
   },
@@ -149,7 +173,7 @@
     "def build_databases(cutoffs):\n",
     "    for c in cutoffs:\n",
     "        example_build = subprocess.check_output(\n",
-    "            ['java', '-jar', '../jars/ConstructBinaryNetwork.jar', str(c)])\n",
+    "            [java, '-jar', '../jars/ConstructBinaryNetwork.jar', str(c)])\n",
     "    # TODO: plot time for construction w/ different # of nodes. \n",
     "        "
    ]
@@ -187,7 +211,7 @@
     "def connected_components(filepath):\n",
     "    print('find connected components for {}'.format(filepath))\n",
     "    example_result = subprocess.check_output(\n",
-    "        ['java', '-jar', '../jars/ConnectedComponentsFinder.jar', filepath])\n",
+    "        [java, '-jar', '../jars/ConnectedComponentsFinder.jar', filepath])\n",
     "    results = str(example_result,'utf-8')\n",
     "    result_sentence = re.findall(r'There are \\d+ different connected '\n",
     "                                 'components for cutoff \\d+.\\d+', results)[0]\n",
