tsv creation and parsing; almost ready for big network

--- a/jupyter/build_graphs_and_find_connected_components.ipynb
+++ b/jupyter/build_graphs_and_find_connected_components.ipynb
@@ -59,8 +59,9 @@
    "outputs": [],
    "source": [
     "# for Waffle, until the default Java is set to 8:\n",
-    "java=\"/usr/lib/jvm/java-8-oracle/jre/bin/java\"\n",
-    "# for badger, set java = 'java'"
+    "#java=\"/usr/lib/jvm/java-8-oracle/jre/bin/java\"\n",
+    "# for badger, set java = 'java'\n",
+    "java='java'"
    ]
   },
   {
@@ -89,7 +90,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
