--- a/jupyter/build_graphs_and_find_connected_components--Binary.ipynb
+++ b/jupyter/build_graphs_and_find_connected_components--Binary.ipynb
@@ -118,8 +118,8 @@
    "outputs": [],
    "source": [
     "example_result = subprocess.check_output(\n",
-    "    [java, '-jar', '../jars/ConnectedComponentsFinder.jar', \n",
-    "     '../data_mining_Neo4j_v2_3_2/databases/db_binary_0.010000'])"
+    "    [java, '-jar', '../jars/ConnectedComponentsFinderBinary.jar', \n",
+    "     '../data_mining_Neo4j_v2_3_2/databases/db_binary_0.02'])"
    ]
   },
   {
@@ -212,7 +212,7 @@
     "def connected_components(filepath):\n",
     "    print('find connected components for {}'.format(filepath))\n",
     "    example_result = subprocess.check_output(\n",
-    "        [java, '-jar', '../jars/ConnectedComponentsFinder.jar', filepath])\n",
+    "        [java, '-jar', '../jars/ConnectedComponentsFinderBinary.jar', filepath])\n",
     "    results = str(example_result,'utf-8')\n",
     "    result_sentence = re.findall(r'There are \\d+ different connected '\n",
     "                                 'components for cutoff \\d+.\\d+', results)[0]\n",
@@ -245,7 +245,7 @@
    "source": [
     "results = pd.DataFrame()\n",
     "for c in cutoffs:\n",
-    "    path = '../data_mining_Neo4j_v2_3_2/databases/db_binary_' + str(c) + '0000'\n",
+    "    path = '../data_mining_Neo4j_v2_3_2/databases/db_binary_' + str(c) \n",
     "    #result = pd.DataFrame({'connected components': ['6'], 'cutoff': [i]})\n",
     "    #print(result)\n",
     "    result = pd.DataFrame(connected_components(path))\n",
