database_comparisons.py is doing much of what the notebook did; next make it load existing result

--- a/jupyter/build_graphs_and_find_connected_components--Binary.ipynb
+++ b/jupyter/build_graphs_and_find_connected_components--Binary.ipynb
@@ -11,6 +11,7 @@
     "import pandas as pd\n",
     "import re\n",
     "import subprocess\n",
+    "import sys\n",
     "import matplotlib as mpl\n",
     "mpl.use('Agg') \n",
     "import matplotlib.pyplot as plt\n",
@@ -20,34 +21,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`mv Untitled.jar ConnectedComponents.jar`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "worked:\n",
-    "\n",
-    "```\n",
-    "badger:Neo4j_meta4 janet$ pwd\n",
-    "/Users/janet/Neo4j_meta4\n",
-    "badger:Neo4j_meta4 janet$ java -jar ConnectedComponents.jar 0.03\n",
-    "``` "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "! pwd"
+    "sys.path.append('../code/')\n",
+    "\n",
+    "from database_comparisons import Database, DatabaseComparison"
    ]
   },
   {
@@ -160,7 +143,8 @@
    },
    "outputs": [],
    "source": [
-    "cutoffs = [0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07]"
+    "#cutoffs = [0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07]\n",
+    "cutoffs = [0.05, 0.06] "
    ]
   },
   {
@@ -232,7 +216,7 @@
    },
    "outputs": [],
    "source": [
-    "connected_components('../data_mining_Neo4j_v2_3_2/databases/db_binary_0.010000')"
+    "connected_components('../data_mining_Neo4j_v2_3_2/databases/db_binary_0.01')"
    ]
   },
   {
@@ -289,6 +273,68 @@
    "outputs": [],
    "source": [
     "connected_components = plot(results, 'cutoff', 'connected components')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try the new Python object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "db = Database(cutoff = 0.33, desc_string='binary')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "db.db_construction_stdout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "db.summary_df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "db.parse_create_db_output()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "db.summary_df()"
    ]
   },
   {
