db building stdout, stderror --> file

--- a/jupyter/build_graphs_and_find_connected_components--Binary.ipynb
+++ b/jupyter/build_graphs_and_find_connected_components--Binary.ipynb
@@ -8,6 +8,7 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
     "import re\n",
     "import subprocess\n",
@@ -67,65 +68,6 @@
    "outputs": [],
    "source": [
     "! ls -l ../*.jar"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "example_build = subprocess.check_output([java, '-jar', \n",
-    "                                         '../jars/ConstructBinaryNetwork.jar', '0.05'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "print(example_build.decode('utf-8'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "example_result = subprocess.check_output(\n",
-    "    [java, '-jar', '../jars/ConnectedComponentsFinderBinary.jar', \n",
-    "     '../data_mining_Neo4j_v2_3_2/databases/db_binary_0.02'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "print(example_result.decode('utf-8'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "re.findall(r'There are \\d+ different connected components for cutoff \\d+.\\d+', \n",
-    "           str(example_result))"
    ]
   },
   {
@@ -216,17 +158,6 @@
    },
    "outputs": [],
    "source": [
-    "connected_components('../data_mining_Neo4j_v2_3_2/databases/db_binary_0.01')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
     "results = pd.DataFrame()\n",
     "for c in cutoffs:\n",
     "    path = '../data_mining_Neo4j_v2_3_2/databases/db_binary_' + str(c) \n",
@@ -290,6 +221,28 @@
    },
    "outputs": [],
    "source": [
+    "os.path.dirname('../data_mining_Neo4j_v2_3_2/databases/db_binary_0.33/stderr_build.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "! ls ../data_mining_Neo4j_v2_3_2/databases/db_binary_0.33"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "db = Database(cutoff = 0.33, desc_string='binary')"
    ]
   },
@@ -325,26 +278,6 @@
    "source": [
     "db.parse_create_db_output()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "db.summary_df()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
