--- a/jupyter/build_graphs_and_find_connected_components--Binary.ipynb
+++ b/jupyter/build_graphs_and_find_connected_components--Binary.ipynb
@@ -261,10 +261,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# try loading an existing db. \n",
+    "db2 = Database(cutoff = 0.33, desc_string='binary')\n",
+    "db2.summary_df()"
+   ]
   }
  ],
  "metadata": {
