demo of essential python module features; ready for 50M network

--- a/jupyter/build_graphs_and_find_connected_components--Binary.ipynb
+++ b/jupyter/build_graphs_and_find_connected_components--Binary.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -71,101 +71,121 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dbc = DatabaseComparison(desc_string='binary')\n",
+    "dbc.make_db(cutoff=0.04)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dbc.summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dbc.make_db(cutoff=0.04)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dbc.make_dbs([0.3, 0.5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dbc.summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dbc.databases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "p = dbc.plot_db_construction_time_vs_n_nodes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "p = dbc.plot_db_construction_time_vs_cutoff()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "p = dbc.plot_cc_vs_cutoff()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "assert False"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Run the real query"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#cutoffs = [0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07]\n",
-    "cutoffs = [0.05, 0.06] "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def build_databases(cutoffs):\n",
-    "    for c in cutoffs:\n",
-    "        example_build = subprocess.check_output(\n",
-    "            [java, '-jar', '../jars/ConstructBinaryNetwork.jar', str(c)])\n",
-    "    # TODO: plot time for construction w/ different # of nodes. \n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "build_databases(cutoffs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "! ls -l ../data_mining_Neo4j_v2_3_2/databases/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def connected_components(filepath):\n",
-    "    print('find connected components for {}'.format(filepath))\n",
-    "    example_result = subprocess.check_output(\n",
-    "        [java, '-jar', '../jars/ConnectedComponentsFinderBinary.jar', filepath])\n",
-    "    results = str(example_result,'utf-8')\n",
-    "    result_sentence = re.findall(r'There are \\d+ different connected '\n",
-    "                                 'components for cutoff \\d+.\\d+', results)[0]\n",
-    "    print(result_sentence)\n",
-    "    cc = re.findall('(\\d+) different', result_sentence)\n",
-    "    cc[0] = int(cc[0])\n",
-    "    cutoff = re.findall('for cutoff (\\d+.\\d+)', result_sentence)\n",
-    "    cutoff[0] = float(cutoff[0])\n",
-    "    return {'cutoff': cutoff, 'connected components':cc}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "results = pd.DataFrame()\n",
-    "for c in cutoffs:\n",
-    "    path = '../data_mining_Neo4j_v2_3_2/databases/db_binary_' + str(c) \n",
-    "    #result = pd.DataFrame({'connected components': ['6'], 'cutoff': [i]})\n",
-    "    #print(result)\n",
-    "    result = pd.DataFrame(connected_components(path))\n",
-    "    results = pd.concat([results, result], axis=0)\n",
-    "results"
    ]
   },
   {
@@ -211,6 +231,17 @@
    "metadata": {},
    "source": [
     "## Try the new Python object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "assert False"
    ]
   },
   {
@@ -265,10 +296,41 @@
    },
    "outputs": [],
    "source": [
+    "load_existing_db(db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "# try loading an existing db. \n",
     "db2 = Database(cutoff = 0.33, desc_string='binary')\n",
     "db2.summary_df()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "load_existing_db(db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
