notebook ready for Waffle

--- a/jupyter/build_graphs_and_find_connected_components_50M.ipynb
+++ b/jupyter/build_graphs_and_find_connected_components_50M.ipynb
@@ -78,8 +78,8 @@
    },
    "outputs": [],
    "source": [
-    "dbc = DatabaseComparison(desc_string='binary')\n",
-    "dbc.make_db(cutoff=0.04)"
+    "dbc = DatabaseComparison(desc_string='50M')\n",
+    "dbc.make_db(cutoff=0.06)"
    ]
   },
   {
@@ -101,18 +101,7 @@
    },
    "outputs": [],
    "source": [
-    "dbc.make_db(cutoff=0.04)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "dbc.make_dbs([0.3, 0.5])"
+    "dbc.make_dbs([0.055, 0.06]) # expect one to be ignored since it was already created. "
    ]
   },
   {
