basic parsing of connected components

--- a/jupyter/plot_available_50M_results.ipynb
+++ b/jupyter/plot_available_50M_results.ipynb
@@ -90,8 +90,43 @@
    },
    "outputs": [],
    "source": [
+    "files = os.listdir('../data_mining_Neo4j_v2_3_2/databases')\n",
+    "files = [f for f in files if 'db_50M_' in f and '.tsv' in f]\n",
+    "files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "sorted([float(re.search('50M_(\\d+.\\d*)', f).groups()[0]) for f in files])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cutoffs = sorted([float(re.search('50M_(\\d+.\\d*)', f).groups()[0]) for f in files])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "dbc = DatabaseComparison(desc_string='50M')\n",
-    "dbc.make_dbs([0.005, 0.075, 0.01, 0.0125, 0.015, 0.02, 0.025, 0.03, 0.035, 0.04, 0.045, 0.05, 0.055, 0.06])"
+    "dbc.make_dbs(cutoffs)"
    ]
   },
   {
@@ -124,7 +159,7 @@
    },
    "outputs": [],
    "source": [
-    "p = dbc.plot_db_construction_time_vs_n_nodes()"
+    "p = dbc.plot_db_construction_time_vs_n_nodes(logx=True)"
    ]
   },
   {
@@ -146,7 +181,7 @@
    },
    "outputs": [],
    "source": [
-    "p = dbc.plot_base(x='cutoff', y='edges', color='k', logy=True, figsize=(4.5, 2.5))"
+    "p = dbc.plot_db_construction_time_vs_n_nodes(logx=True)"
    ]
   },
   {
@@ -157,7 +192,7 @@
    },
    "outputs": [],
    "source": [
-    "p = dbc.plot_base(x='cutoff', y='edges', color='k', logy=True, figsize=(4.5, 2.5))"
+    "p = dbc.plot_density_vs_nodes(logx=True)"
    ]
   },
   {
@@ -168,7 +203,7 @@
    },
    "outputs": [],
    "source": [
-    "#dbc.make_dbs([0.001, 0.003]) "
+    "p = dbc.plot_base(x='cutoff', y='nodes', color='k', logy=True, figsize=(4.5, 2.5))"
    ]
   },
   {
@@ -179,7 +214,7 @@
    },
    "outputs": [],
    "source": [
-    "dbc.make_dbs([0.0125])"
+    "dbc.summary.columns"
    ]
   },
   {
@@ -190,7 +225,107 @@
    },
    "outputs": [],
    "source": [
-    "dbc.make_dbs([0.0075])"
+    "p = dbc.plot_base(x='cutoff', y='construction seconds', color='k', logy=True, figsize=(4.5, 2.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "p = dbc.plot_base(x='cutoff', y='construction minutes', color='k', logy=False, figsize=(4.5, 2.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dbc.summary.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
+    "dbc.summary.plot.scatter(x='cutoff', y='nodes', c='construction minutes', ax=ax)\n",
+    "plt.xlabel('partial correlation cutoff')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
+    "dbc.summary.plot.scatter(x='construction minutes', y='nodes', c='cutoff', ax=ax)\n",
+    "plt.xlabel('database construction time (minutes)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
+    "dbc.summary.plot.scatter(x='cutoff', y='connected components', c='density', ax=ax)\n",
+    "plt.xlabel('partial correlation cutoff')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
+    "dbc.summary.plot.scatter(x='nodes', y='connected components', c='density', ax=ax)\n",
+    "#plt.xlabel('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
+    "dbc.summary.plot.scatter(x='nodes', y='connected components', c='cutoff', ax=ax)\n",
+    "#plt.xlabel('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
+    "dbc.summary.plot.scatter(x='cutoff', y='connected components', c='nodes', ax=ax)\n",
+    "plt.xlabel('partial correlation cutoff')"
    ]
   },
   {
