counts # of multi-species connected components

--- a/jupyter/incorporate_tsv_info.ipynb
+++ b/jupyter/incorporate_tsv_info.ipynb
@@ -113,7 +113,7 @@
    },
    "outputs": [],
    "source": [
-    "ccdb = ConnectedComponentsDB(cutoff=0.06, desc_string='50M')"
+    "ccdb = ConnectedComponentsDB(cutoff=0.015, desc_string='50M')"
    ]
   },
   {
@@ -135,7 +135,7 @@
    },
    "outputs": [],
    "source": [
-    "print(ccdb.components[0])"
+    "print(ccdb.components[0].Counter)"
    ]
   },
   {
@@ -147,14 +147,38 @@
    "outputs": [],
    "source": [
     "dbc = DatabaseComparison(desc_string='50M')\n",
-    "dbc.make_dbs([0.06, 0.055, 0.05])"
+    "dbc.make_dbs([0.06, 0.0125])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dbc.databases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for n, d in dbc.databases.items():\n",
+    "    print(d.connected_components.num_components)\n",
+    "    print(d.connected_components)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
