--- a/jupyter/plot_available_50M_results.ipynb
+++ b/jupyter/plot_available_50M_results.ipynb
@@ -285,7 +285,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
-    "dbc.summary.plot.scatter(x='cutoff', y='connected components', c='density', ax=ax)\n",
+    "dbc.summary.plot.scatter(x='cutoff', y='# connected components', c='density', ax=ax)\n",
     "plt.xlabel('partial correlation cutoff')"
    ]
   },
@@ -298,7 +298,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
-    "dbc.summary.plot.scatter(x='nodes', y='connected components', c='density', ax=ax)\n",
+    "dbc.summary.plot.scatter(x='nodes', y='# connected components', c='density', ax=ax)\n",
     "#plt.xlabel('')"
    ]
   },
@@ -311,7 +311,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
-    "dbc.summary.plot.scatter(x='nodes', y='connected components', c='cutoff', ax=ax)\n",
+    "dbc.summary.plot.scatter(x='nodes', y='# connected components', c='cutoff', ax=ax)\n",
     "#plt.xlabel('')"
    ]
   },
@@ -324,7 +324,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
-    "dbc.summary.plot.scatter(x='cutoff', y='connected components', c='nodes', ax=ax)\n",
+    "dbc.summary.plot.scatter(x='cutoff', y='# connected components', c='nodes', ax=ax)\n",
     "plt.xlabel('partial correlation cutoff')"
    ]
   },
@@ -332,10 +332,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
+    "dbc.summary.plot.scatter(x='cutoff', y='# cc with multiple species',\n",
+    "                         c='# connected components', ax=ax)\n",
+    "plt.xlabel('partial correlation cutoff')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
+    "dbc.summary.plot.scatter(x='cutoff', y='frac cc with multiple species',\n",
+    "                         c='# connected components', ax=ax)\n",
+    "plt.xlabel('partial correlation cutoff')"
+   ]
   }
  ],
  "metadata": {
